--- a/index1.html
+++ b/index1.html
@@ -3,13 +3,23 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="author" content="Sumon Rahman">
-<meta name="description" content="">
-<meta name="keywords" content="HTML,CSS,XML,JavaScript">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="application-name" content="Vaga-livre" />
+<meta name="description" content="Somos uma startup que usa inteligência artificial para detecção de vagas disponíveis para estacionar o seu carro de forma rápida e fácil na rua.. e claro 100% gratuita.">
+<meta name="keywords" content="Estacionar na rua, parar carro, mobilidade inteligente, cidades inteligentes, app inovador, aplicativos, inteligência artificial">
+<meta name="author" content="Rafael de Santis Fundador Vaga-livre">
+<meta name="robots" content="index, follow">
 
-<title>Appy App Landing Template.</title>
+	
+<link rel="canonical" href="https://vagalivre.tech/" />
+<meta property="og:locale" content="pt_BR" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="index.html" />
+<meta property="og:site_name" content="Vaga-livre" />
+
+
+<title>Vaga livre seu app de vagas</title>
 
 <link rel="apple-touch-icon" href="images/xapple-touch-icon.png.pagespeed.ic.YWxfLxrgyu.png">
 <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
@@ -74,10 +84,10 @@
 <h1 class="wow fadeInUp" data-wow-delay="0.4s">Que tal nunca mais sofrer para achar vagas na rua ?</h1>
 <div class="space-20"></div>
 <div class="desc wow fadeInUp" data-wow-delay="0.6s">
-<p>Só quem mora em cidade grande sabe o quão frustante é ficar dando volta no quarteirão buscando uma vaga para estacionar o seu Carro.. Agora seus problemas acabaram, baixe o app I Park e deixe que nós te falamos onde estacionar seu carro na rua.</p>
+<p>Só quem mora em cidade grande sabe o quão frustrante é ficar dando volta no quarteirão buscando uma vaga para estacionar o seu Carro.. Agora seus problemas acabaram, baixe imediatamente o app Vaga-livre e deixe que nós te falamos onde estacionar seu carro na rua.</p>
 </div>
 <div class="space-20"></div>
-<a href="#" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Baixe o App</a>
+<a href="https://play.google.com/store/apps/details?id=com.vagarua" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Baixe o App</a>
 </div>
 </div>
 </div>
@@ -93,9 +103,9 @@
 <!--<div class="space-20"></div>--><br>
 <h5 class="title">Sobre o App</h5>
 <div class="space-30"></div>
-<h3 class="blue-color">I Park é um app desenvolvido visando auxiliar os cidadão de grandes cidades a encontrarem vagas para estacionarem os seus carros na rua de forma totalmente gratuita. </h3>
+<h3 class="blue-color">O Vaga-livre é um app desenvolvido visando auxiliar os cidadãos de grandes cidades a encontrarem vagas para estacionarem os seus carros na rua de forma totalmente gratuita. </h3>
 <div class="space-20"></div>
-<p>Através dos algoritmos mais potentes de inteligência artificial, é feita uma análise em tempo real e assim informamos ao usuário o local mais próximo dele para estacionar o seu carro na rua, tudo isso em tempo real.</p>
+<p>Através dos algoritmos mais potentes de inteligência artificial, é feita uma análise em tempo real e assim informamos ao usuário o local mais próximo de sua localização para estacionar o seu carro na rua, tudo isso em tempo real.</p>
 </div>
 </div>
 </div>
@@ -202,7 +212,7 @@
 <div class="space-60"></div>
 <div class="service-box wow fadeInUp" data-wow-delay="0.4s">
 <div class="box-icon">
-<i class="lnr lnr-laptop-phone"></i>
+<i class="lnr lnr-map-marker"></i>
 </div>
 <h4>ESTACIONE PERTO DE VOCÊ</h4>
 <p>Basta permitir o acesso a sua localização e será mostrado onde há vagas próximas de você.</p>
@@ -238,15 +248,15 @@
 <div class="team-slide">
 <div class="team-box">
 <div class="team-image">
-<img src="images/xteam-1.png.pagespeed.ic.UIUSvCc1A8.png" alt="">
+<img src="images/rosto-so.jpg" alt="">
 </div>
 <h4>Sofia Moran</h4>
 <h6 class="position">Psiocóloga</h6>
-<p>Sempre sofri muito para achar vagas para estacionar perto da empresa, o I Park, facilitou muito a minha vida.</p>
+<p>Sempre sofri muito para achar vagas para estacionar perto da empresa, o Vaga-livre, facilitou muito a minha vida.</p>
 </div>
 <div class="team-box">
 <div class="team-image">
-<img src="images/xteam-2.jpg.pagespeed.ic.rlHFqX_JgU.jpg" alt="">
+<img src="images/ve-rosto.jpg" alt="">
 </div>
 <h4>Bruno Vaz</h4>
 <h6 class="position">Head of marketing</h6>
@@ -254,7 +264,7 @@
 </div>
 <div class="team-box">
 <div class="team-image">
-<img src="images/xteam-3.jpg.pagespeed.ic.jQTCGxcwFi.jpg" alt="">
+<img src="images/donis-rosto.jpg" alt="">
 </div>
 <h4>Pedro Leme</h4>
 <h6 class="position">Jogador de basquete</h6>
@@ -262,7 +272,7 @@
 </div>
 <div class="team-box">
 <div class="team-image">
-<img src="images/xteam-1.png.pagespeed.ic.UIUSvCc1A8.png" alt="">
+<img src="images/ka-rosto.jpg" alt="">
 </div>
 <h4>Fernanda Viana</h4>
 <h6 class="position">Atriz</h6>
@@ -270,7 +280,7 @@
 </div>
 <div class="team-box">
 <div class="team-image">
-<img src="images/xteam-2.jpg.pagespeed.ic.rlHFqX_JgU.jpg" alt="">
+<img src="images/se-rosto.jpg" alt="">
 </div>
 <h4>Elon Musk</h4>
 <h6 class="position">Ceo da Tesla</h6>
@@ -387,10 +397,10 @@
 <div class="col-xs-12 col-md-6 section-padding">
 <h3 class="white-color">Baixe o App</h3>
 <div class="space-20"></div>
-<p>Deixe de sofrer para achar vaga na rua para estacionar seu carro, baixe imediatamente o app I Park.</p>
+<p>Deixe de sofrer para achar vaga na rua para estacionar seu carro, baixe imediatamente o app Vaga-livre.</p>
 <div class="space-60"></div>
 <a href="#" class="bttn-white sq"><img src="images/xapple-icon.png.pagespeed.ic.ZPtGoZI0Jm.png" alt="apple icon"> Apple Store</a>
-<a href="#" class="bttn-white sq"><img src="images/xplay-store-icon.png.pagespeed.ic.HLgZa9Ht5D.png" alt="Play Store Icon"> Play Store</a>
+<a href="https://play.google.com/store/apps/details?id=com.vagarua" class="bttn-white sq"><img src="images/xplay-store-icon.png.pagespeed.ic.HLgZa9Ht5D.png" alt="Play Store Icon"> Play Store</a>
 </div>
 </div>
 </div>
@@ -428,7 +438,7 @@
 <sup>&#36;</sup> <span class="rate">0</span> <small>/Mês</small>
 </div>
 <div class="price-footer">
-<a href="#" class="bttn-white">Adquira já</a>
+<a href="https://play.google.com/store/apps/details?id=com.vagarua" class="bttn-white">Adquira já</a>
 </div>
 </div>
 <!--
@@ -556,7 +566,7 @@ AQUIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
 <form action="https://api.staticforms.xyz/submit" method="post" >
 <input type="hidden" name="accessKey" value="6e3c16ab-83e3-4ec9-aaf2-2cfc0c8dd2cb">
 <input type="text" name="email" placeholder="Informe seu email" class="control"> 
-<input type="hidden" name="redirectTo" value="https://rasantis.github.io/teste-site-2/"> 
+<input type="hidden" name="redirectTo" value="https://vagalivre.tech"> 
 <input class="bttn-white active" type="submit" value="Enviar"/>
 
 </form>
@@ -595,7 +605,7 @@ AQUIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
 <div class="box-icon">
 <span class="lnr lnr-phone-handset"></span>
 </div>
-<p>+55 11977655095</p>
+<a href="https://wa.me/message/YV4YXMKP5DHTE1"><p>+55 11977655095</p></a>
 </div>
 <div class="space-30 hidden visible-xs"></div>
 </div>
@@ -604,8 +614,7 @@ AQUIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
 <div class="box-icon">
 <span class="lnr lnr-envelope"></span>
 </div>
-<p> Rafa25santis@gmail.com
-</p>
+<p><a href="mailto:Rafa25santis@gmail.com">Rafa25santis@gmail.com</a></p>
 </div>
 </div>
 </div>
